objects/lnt__Send_Gift_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>lnt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>lnt__Error_Type__c</fullName>
        <label>Error Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Send Gift Error Logs</relationshipLabel>
        <relationshipName>Send_Gift_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__RecordId__c</fullName>
        <label>RecordId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Send Gift Error Log</label>
    <listViews>
        <fullName>lnt__All</fullName>
        <columns>NAME</columns>
        <columns>lnt__Contact__c</columns>
        <columns>lnt__Lead__c</columns>
        <columns>lnt__Account__c</columns>
        <columns>lnt__Campaign__c</columns>
        <columns>lnt__Opportunity__c</columns>
        <columns>lnt__Error_Type__c</columns>
        <columns>lnt__Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SG-{0000}</displayFormat>
        <label>Send Gift Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Gift Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>